--- a/microk8s-playbook.yml
+++ b/microk8s-playbook.yml
@@ -1,6 +1,6 @@
 - hosts: all
   roles:
-    - role: 'ansible_role_microk8s'
+    - role: 'istvano.microk8s'
       vars:
         microk8s_version: "1.23/stable"
         microk8s_plugins:
