--- a/microk8s-playbook.yml
+++ b/microk8s-playbook.yml
@@ -1,6 +1,6 @@
 - hosts: all
   roles:
-    - role: 'istvano.microk8s'
+    - role: ansible_role_microk8s
       vars:
         microk8s_plugins:
           dns: "1.1.1.1"
