Fix uk8s components.

--- a/microk8s-playbook.yml
+++ b/microk8s-playbook.yml
@@ -6,6 +6,6 @@
         add_workers_to_hostfile: true
         microk8s_plugins:
           dns: "1.1.1.1"
-          ingress: true
+          ingress: false
           metrics-server: false
-          cert-manager: true
+          cert-manager: false
