--- a/provision-shapeblock.yml
+++ b/provision-shapeblock.yml
@@ -12,10 +12,25 @@
       run_once: true
       delegate_to: "{{groups['microk8s_HA'][0]}}"
 
+    # [BEGIN] Registry
+    - name: Generate bcrypt hash of the password
+      set_fact:
+        hashed_password: "{{ password | password_hash('bcrypt') }}"
+
+    - name: Escape $ characters in the bcrypt hash
+      set_fact:
+        escaped_hashed_password: "{{ hashed_password | regex_replace('\\$', '\\\\$') }}"
+
+    - name: Install SB registry
+      shell: "microk8s enable sb-registry --cluster-name {{ domain }} --password \"{{ escaped_hashed_password }}\""
+      run_once: true
+      delegate_to: "{{groups['microk8s_HA'][0]}}"
+
     - name: Install SB registry
       shell: "microk8s enable sb-registry --cluster-name {{ domain }} --password {{ password }}"
       run_once: true
       delegate_to: "{{groups['microk8s_HA'][0]}}"
+    # [END] Registry
 
     - name: Install SB Helm controller
       shell: "microk8s enable sb-flux"
