--- a/microk8s-playbook.yml
+++ b/microk8s-playbook.yml
@@ -9,3 +9,5 @@
           ingress: true
           metrics-server: true
           cert-manager: true
+          community: true
+          nfs: true
