--- a/provision-shapeblock.yml
+++ b/provision-shapeblock.yml
@@ -27,7 +27,7 @@
       delegate_to: "{{groups['microk8s_HA'][0]}}"
 
     - name: Install SB registry
-      shell: "microk8s enable sb-registry --cluster-name {{ domain }} --password {{ password }}"
+      shell: "microk8s enable sb-registry --cluster-name {{ domain }} --password {{ password }}" --tld "{{ tld }}"
       run_once: true
       delegate_to: "{{groups['microk8s_HA'][0]}}"
     # [END] Registry
