--- a/provision-shapeblock.yml
+++ b/provision-shapeblock.yml
@@ -28,12 +28,12 @@
         escaped_hashed_password: "{{ hashed_password | regex_replace('\\$', '\\\\$') }}"
 
     - name: Install SB registry
-      shell: "microk8s enable sb-registry --cluster-name {{ domain }} --password \"{{ escaped_hashed_password }}\""  --tld "{{ tld }}"
+      shell: "microk8s enable sb-registry --cluster-name {{ domain }} --password \"{{ escaped_hashed_password }}\"  --tld {{ tld }}"
       run_once: true
       delegate_to: "{{groups['microk8s_HA'][0]}}"
 
     - name: Install SB registry
-      shell: "microk8s enable sb-registry --cluster-name {{ domain }} --password {{ password }}" --tld "{{ tld }}"
+      shell: "microk8s enable sb-registry --cluster-name {{ domain }} --password {{ password }} --tld {{ tld }}"
       run_once: true
       delegate_to: "{{groups['microk8s_HA'][0]}}"
     # [END] Registry
