Update IP address.

--- a/provision-shapeblock.yml
+++ b/provision-shapeblock.yml
@@ -22,7 +22,7 @@
       lineinfile:
         dest: "/var/snap/microk8s/current/certs/csr.conf.template"
         insertafter: '#MOREIPS'
-        line: "IP.10 = {{ ansible_default_ipv4.address }}"
+        line: "IP.10 = {{ ansible_ssh_host }}"
       when: ansible_ssh_user == "ubuntu"
 
     - name: Reset ssh connection to allow user changes to affect ansible user
