--- a/check-ssh.yml
+++ b/check-ssh.yml
@@ -1,15 +1,15 @@
----
 - name: Check SSH connectivity to all hosts
   hosts: all
   gather_facts: no
   tasks:
     - name: Wait for SSH port to become available
       wait_for:
-        host: "{{ inventory_hostname }}"  # Use the host from inventory
+        host: "{{ ansible_host | default(inventory_hostname) }}"  # Ensures correct host is used
         port: 22  # SSH port
         state: started  # Wait for the port to be open
-        timeout: 300  # Wait up to 300 seconds
-      retries: 5
+        timeout: 300  # Maximum wait time
+        delay: 10  # Wait 10 seconds before the first attempt
+      retries: 10
       delay: 60
       register: ssh_ready
       until: ssh_ready is succeeded
