--- a/check-ssh.yml
+++ b/check-ssh.yml
@@ -2,6 +2,11 @@
   hosts: all
   gather_facts: no
   tasks:
+
+  - name: Pause for 2 minutes for VMs to be up
+    ansible.builtin.pause:
+      minutes: 2
+
     - name: Wait for SSH port to become available
       wait_for:
         host: "{{ ansible_host | default(inventory_hostname) }}"  # Ensures correct host is used
